Project Module Completed 100% with optional improvements Enhanced the Project module of TaskSync into an enterprise-grade SaaS system by implementing role-based project visibility, secure service-layer access control, and advanced project listing with search, pagination, and sorting. Added GitHub-style activity logs for full auditability, introduced a soft delete and restore (trash) mechanism for safe project lifecycle management, and integrated project progress placeholders to support future task-based analytics. Ensured strict RBAC enforcement, prevented unauthorized access, and designed the module to be scalable, secure, and production-ready.